# pico-wifi-rtos-mqtt

./: CMakeLists.txt  README.md
.github/workflows/: cppcheck.yml  embedded-check.yml
mqtt/: CMakeLists.txt  mqtt_client.c
wifi/: CMakeLists.txt  main.c
